unpackaged/main/default/objects/Contact/fields/Beac_Exp_Dt_CVRM__c.field-meta.xml
<CustomField>
    <fullName>Beac_Exp_Dt_CVRM__c</fullName>
    <label>Beac Exp Dt - CVRM</label>
    <type>Date</type>
</CustomField>