unpackaged/main/default/objects/Contact/fields/Beac_Exp_Dt_Neurology__c.field-meta.xml
<CustomField>
    <fullName>Beac_Exp_Dt_Neurology__c</fullName>
    <label>Beac Exp Dt - Neurology</label>
    <type>Date</type>
</CustomField>