unpackaged/main/default/objects/Contact/fields/Beac_Exp_Dt_Psychiatric__c.field-meta.xml
<CustomField>
    <fullName>Beac_Exp_Dt_Psychiatric__c</fullName>
    <label>Beac Exp Dt - Psychiatric</label>
    <type>Date</type>
</CustomField>