unpackaged/main/default/objects/Contact/fields/Beacon_ADC_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Beacon_ADC_Lead_Score__c</fullName>
    <inlineHelpText>Displays the Marketo-generated lead score for Beacon ADC prospects, based on engagement, behaviour, and fit criteria. 100+ represents a high priority lead</inlineHelpText>
    <label>Beacon - ADC - Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>