unpackaged/main/default/objects/Contact/fields/Beacon_CVRM__c.field-meta.xml
<CustomField>
    <fullName>Beacon_CVRM__c</fullName>
    <label>Beacon - CVRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Active User</fullName>
            </value>
            <value>
                <fullName>Inactive User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>