unpackaged/main/default/objects/Contact/fields/Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner__c</fullName>
    <defaultValue>CASE( $User.Entity__c, "Conferences", "Conferences" , "Beacon", "Beacon", "Shared", "Shared", "")</defaultValue>
    <description>This is used in Sharing Rules to control record visibility. It is part of the data separation project. At record creation it defaults to the value of the Entity__c field on the User creating the record. It also gets set via several record-triggered Flows from related Objects.</description>
    <inlineHelpText>This is used in Sharing Rules to control record visibility. It is part of the data separation project. At record creation it defaults to the value of the Entity__c field on the User creating the record. It also gets set via several record-triggered Flows from related Objects.</inlineHelpText>
    <label>Data Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Owner</valueSetName>
    </valueSet>
</CustomField>